feat: 删除多余返回值
